spec/neg/syntax_error.wv
-- syntax error
from 1



